# roadmap-ia

./: .env  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
roadmap_ai/: enums.py  main.py  settings.py
roadmap_ai/migrations/: env.py
roadmap_ai/migrations/versions/: 50ca1a19a4f2_add_skill_column.py  bc08cfa65ea6_create_roadmap_table.py
roadmap_ai/models/: __init__.py  roadmap.py
roadmap_ai/routes/: roadmap.py
roadmap_ai/schemas/: roadmap.py
roadmap_ai/services/: ai.py
scripts/entrypoints/: api.sh
tests/: conftest.py  test_routes.py
