[tool.poetry]
name = "roadmap-ai"
version = "0.1.0"
description = "API for Roadmap generation"
authors = ["Kingoftime"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"

[tool.poetry.group.api.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
openai = "^1.54.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "ANN",  # flake8-annotation
    "LOG", # flake8-logging
    "PT", # pytest-style
    "S",  # flake8-bandir
    "N",  # PEP8 naming conventions
    "D"  # pydocstyle
]
ignore = ["D104", "D100"]

[tool.ruff.lint.pydocstyle]
convention = "google"
